fix: handle chmod when no shell files exist

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -15,7 +15,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Make scripts executable
-        run: chmod +x scripts/*.sh tests/*.sh
+        run: |
+          chmod +x scripts/*.sh || true
+          chmod +x tests/*.sh || true
 
       - name: Run shell tests
         run: ./tests/test_hello.sh
